lot number and made date. Unsubscribe domains and emails enhanced

--- a/front/admin.html
+++ b/front/admin.html
@@ -85,6 +85,7 @@
 
         .logo-image {
             max-height: 120px;
+            max-width: 200px;
         }
 
         .custom-file-input.custom-file-label::after,
@@ -92,6 +93,8 @@
         .custom-file-input:lang(fr) ~ .custom-file-label::after {
             content: '.csv, .txt'
         }
+
+        .csv-content
 
     </style>
     <link href="public/fontawesome/css/all.min.css" rel="stylesheet">
