--- a/front/admin.html
+++ b/front/admin.html
@@ -140,6 +140,20 @@
                         <div id="editor"></div>
                     </div>
 
+                    <div class="form-group">
+                        <label class="lead d-block">✉️ Email provider</label>
+                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <label class="btn btn-secondary active">
+                                <input type="radio" name="provider" id="provider-option1" value="sendinblue" autocomplete="off" checked> SendinBlue
+                            </label>
+                            <label class="btn btn-secondary">
+                                <input type="radio" name="provider" id="provider-option2" value="sendgrid"  autocomplete="off"> SendGrid
+                            </label>
+                            <label class="btn btn-secondary">
+                                <input type="radio" name="provider" id="provider-option3" value="gmail"  autocomplete="off"> Gmail
+                            </label>
+                        </div>
+                    </div>
 
                     <div class="form-group">
                         <label for="csv-file" class="lead"> 📁 Fichier CSV</label>
