Send massive emails without image

--- a/front/admin.html
+++ b/front/admin.html
@@ -198,7 +198,7 @@
                     <div class="form-group">
                         <label class="lead">💿 File content <span class="lines-detail"></span></label>
                         <div class="table-responsive">
-                            <table class="table table-bordered">
+                            <table class="table table-bordered table-hover">
                                 <thead>
                                 <tr>
                                     <th scope="col">
