Send massive emails without image

--- a/front/admin.html
+++ b/front/admin.html
@@ -94,7 +94,9 @@
             content: '.csv, .txt'
         }
 
-        .csv-content
+        .table-hover tbody tr {
+            cursor: pointer;
+        }
 
     </style>
     <link href="public/fontawesome/css/all.min.css" rel="stylesheet">
